--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,20 +1,92 @@
-<div style=" margin: 5%">
+<div class="row" style=" margin: 8%;">
     <div class="center mb-2">
         <p style="padding-top: 10px;">logo</p>
     </div>
 
-    <!-- <div class="row" style="background-color: #97DD50;"> -->
-
-        <div class="col-md-8 col-sm-8 col-xs-12">
-            <a href="#" class=" mb-2"
-            style="height: 100px; width: 100%; background-color: #97DD50">Check in/out <br>
-            Rechnung</a>
+    <div class="row m-0 text-white align-item mb-2" style="height: 100px; background-color: #8BC63F;">
+        <div class="col-2">
+            <i class="material-icons" style="font-size: 5rem;">pedal_bike</i>
         </div>
 
+        <div class="col-10 text-white font-size text-align">
+            <b>check in/out<br>Rechnung</b>
+        </div>
+    </div>
 
-        <div class="col-md-4 col-sm-4 col-xs-6"></div>
-        <i class="fa fa-home"></i>
-    <!-- </div> -->
+    <div class="row m-0 text-white align-item mb-2 height" style="background-color: #EF3F36;">
+        <div class="col-2">
+            <i class="material-icons" style="font-size: 3rem;">mode_edit_outlined</i>
+        </div>
+
+        <div class="col-10 text-white font-size text-align">
+            <b>Meldeschein</b>
+        </div>
+    </div>
+
+    <div class="row m-0 text-white align-item mb-2 height" style="background-color: #C3996B;">
+        <div class="col-2">
+            <i class="material-icons" style="font-size: 3rem;">pedal_bike</i>
+        </div>
+
+        <div class="col-10 text-white font-size text-align">
+            <b>Bike Info</b>
+        </div>
+    </div>
+
+    <div class="row m-0 text-white align-item mb-2 height" style="background-color: #C3996B;">
+        <div class="col-2">
+            <i class="material-icons" style="font-size: 3rem;">castle</i>
+        </div>
+
+        <div class="col-10 text-white font-size text-align">
+            <b>Sightseeing</b>
+        </div>
+    </div>
+
+    <div class="row m-0 text-white align-item mb-2 height" style="background-color: #C3996B;">
+        <div class="col-2">
+            <i class="material-icons" style="font-size: 3rem;">person</i>
+        </div>
+
+        <div class="col-10 text-white font-size text-align">
+            <b>Restaurant</b>
+        </div>
+    </div>
+
+    <div class="row m-0 text-white align-item mb-2 height" style="background-color: #C3996B;">
+        <div class="col-2">
+            <i class="material-icons" style="font-size: 3rem;">coffee_outlined</i>
+        </div>
+
+        <div class="col-10 text-white font-size text-align">
+            <b>Frühstück</b>
+        </div>
+    </div>
+
+    <div class="row m-0 text-white align-item mb-2 height" style="background-color: #C3996B;">
+        <div class="col-2">
+            <i class="material-icons" style="font-size: 3rem;">info_outlined</i>
+        </div>
+
+        <div class="col-10 text-white font-size text-align">
+            <b>Information</b>
+        </div>
+    </div>
+
+    <div class="row m-0 text-white align-item mb-2 height" style="background-color: #C3996B;">
+        <div class="col-2">
+            <i class="material-icons" style="font-size: 3rem;">call_outlined</i>
+        </div>
+
+        <div class="col-10 text-white font-size text-align">
+            <b>Kontakt</b>
+        </div>
+    </div>
+
+
+
+
+</div>
 
 
 
@@ -25,9 +97,7 @@
 
 
 
-
-
-    <!-- <div>
+<!-- <div>
         <button type="button" class="btn btn-secondary btn-lg btn-block mb-2"
             style="height: 100px; width: 100%; background-color: #97DD50"><i class="fa fa-home"
                 style="float: left;"></i>Check in/out <br>
@@ -66,4 +136,3 @@
         <button type="button" class="btn btn-secondary btn-lg btn-block height backgroundColor"><i
                 class="material-icons" style="float: left;">phone</i>Kontakt</button>
     </div> -->
-</div>
