--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 70px;
-    border: 2px solid black; 
+    border: 2px solid #283991; 
   }
 .height{
     height: 60px;
@@ -11,4 +11,24 @@
 }
 .backgroundColor {
   background-color: #C29F30;
+}
+.font-size{
+  font-size: 20px;
+}
+.align-item{
+  align-items: center;
+}
+.text-align{
+  text-align: center;
+}
+#splash-screen {
+  position: absolute;
+  z-index: 1000;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #f2f3f8;
 }
