--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,138 +1,105 @@
-<div class="row" style=" margin: 8%;">
+<div class="container">
+    <div class="row" style=" margin: 8%;">
     <div class="center mb-2">
         <p style="padding-top: 10px;">logo</p>
     </div>
 
-    <div class="row m-0 text-white align-item mb-2" style="height: 100px; background-color: #8BC63F;">
-        <div class="col-2">
-            <i class="material-icons" style="font-size: 5rem;">pedal_bike</i>
-        </div>
+    <a routerLink="/test" class="p-0" style="text-decoration: none;">
+        <div class="row m-0 text-white align-item mb-2" style="height: 100px; background-color: #8BC63F;">
+            <div class="col-2">
+                <i class="material-icons" style="font-size: 5rem;">pedal_bike</i>
+            </div>
 
-        <div class="col-10 text-white font-size text-align">
-            <b>check in/out<br>Rechnung</b>
+            <div class="col-10 text-white font-size text-align">
+                <b>check in/out<br>Rechnung</b>
+            </div>
         </div>
-    </div>
+    </a>
 
-    <div class="row m-0 text-white align-item mb-2 height" style="background-color: #EF3F36;">
-        <div class="col-2">
-            <i class="material-icons" style="font-size: 3rem;">mode_edit_outlined</i>
+    <a routerLink="/test" class="p-0" style="text-decoration: none;">
+        <div class="row m-0 text-white align-item mb-2 height" style="background-color: #EF3F36;">
+            <div class="col-2">
+                <i class="material-icons" style="font-size: 3rem;">mode_edit_outlined</i>
+            </div>
+
+            <div class="col-10 text-white font-size text-align">
+                <b>Meldeschein</b>
+            </div>
         </div>
+    </a>
 
-        <div class="col-10 text-white font-size text-align">
-            <b>Meldeschein</b>
+    <a routerLink="/pages/bike-info" class="p-0" style="text-decoration: none;">
+        <div class="row m-0 text-white align-item mb-2 height" style="background-color: #C3996B;">
+            <div class="col-2">
+                <i class="material-icons" style="font-size: 3rem;">pedal_bike</i>
+            </div>
+
+            <div class="col-10 text-white font-size text-align">
+                <b>Bike Info</b>
+            </div>
         </div>
-    </div>
+    </a>
 
-    <div class="row m-0 text-white align-item mb-2 height" style="background-color: #C3996B;">
-        <div class="col-2">
-            <i class="material-icons" style="font-size: 3rem;">pedal_bike</i>
+    <a routerLink="/test" class="p-0" style="text-decoration: none;">
+        <div class="row m-0 text-white align-item mb-2 height" style="background-color: #C3996B;">
+            <div class="col-2">
+                <i class="material-icons" style="font-size: 3rem;">castle</i>
+            </div>
+
+            <div class="col-10 text-white font-size text-align">
+                <b>Sightseeing</b>
+            </div>
         </div>
+    </a>
 
-        <div class="col-10 text-white font-size text-align">
-            <b>Bike Info</b>
+    <a routerLink="/test" class="p-0" style="text-decoration: none;">
+        <div class="row m-0 text-white align-item mb-2 height" style="background-color: #C3996B;">
+            <div class="col-2">
+                <i class="material-icons" style="font-size: 3rem;">person</i>
+            </div>
+
+            <div class="col-10 text-white font-size text-align">
+                <b>Restaurant</b>
+            </div>
         </div>
-    </div>
+    </a>
 
-    <div class="row m-0 text-white align-item mb-2 height" style="background-color: #C3996B;">
-        <div class="col-2">
-            <i class="material-icons" style="font-size: 3rem;">castle</i>
+    <a routerLink="/test" class="p-0" style="text-decoration: none;">
+        <div class="row m-0 text-white align-item mb-2 height" style="background-color: #C3996B;">
+            <div class="col-2">
+                <i class="material-icons" style="font-size: 3rem;">coffee_outlined</i>
+            </div>
+
+            <div class="col-10 text-white font-size text-align">
+                <b>Frühstück</b>
+            </div>
         </div>
+    </a>
 
-        <div class="col-10 text-white font-size text-align">
-            <b>Sightseeing</b>
+    <a routerLink="/test" class="p-0" style="text-decoration: none;">
+        <div class="row m-0 text-white align-item mb-2 height" style="background-color: #C3996B;">
+            <div class="col-2">
+                <i class="material-icons" style="font-size: 3rem;">info_outlined</i>
+            </div>
+
+            <div class="col-10 text-white font-size text-align">
+                <b>Information</b>
+            </div>
         </div>
-    </div>
+    </a>
 
-    <div class="row m-0 text-white align-item mb-2 height" style="background-color: #C3996B;">
-        <div class="col-2">
-            <i class="material-icons" style="font-size: 3rem;">person</i>
+    <a routerLink="/test" class="p-0" style="text-decoration: none;">
+        <div class="row m-0 text-white align-item mb-2 height" style="background-color: #C3996B;">
+            <div class="col-2">
+                <i class="material-icons" style="font-size: 3rem;">call_outlined</i>
+            </div>
+
+            <div class="col-10 text-white font-size text-align">
+                <b>Kontakt</b>
+            </div>
         </div>
-
-        <div class="col-10 text-white font-size text-align">
-            <b>Restaurant</b>
-        </div>
-    </div>
-
-    <div class="row m-0 text-white align-item mb-2 height" style="background-color: #C3996B;">
-        <div class="col-2">
-            <i class="material-icons" style="font-size: 3rem;">coffee_outlined</i>
-        </div>
-
-        <div class="col-10 text-white font-size text-align">
-            <b>Frühstück</b>
-        </div>
-    </div>
-
-    <div class="row m-0 text-white align-item mb-2 height" style="background-color: #C3996B;">
-        <div class="col-2">
-            <i class="material-icons" style="font-size: 3rem;">info_outlined</i>
-        </div>
-
-        <div class="col-10 text-white font-size text-align">
-            <b>Information</b>
-        </div>
-    </div>
-
-    <div class="row m-0 text-white align-item mb-2 height" style="background-color: #C3996B;">
-        <div class="col-2">
-            <i class="material-icons" style="font-size: 3rem;">call_outlined</i>
-        </div>
-
-        <div class="col-10 text-white font-size text-align">
-            <b>Kontakt</b>
-        </div>
-    </div>
-
+    </a>
 
 
 
 </div>
-
-
-
-
-
-
-
-
-
-
-<!-- <div>
-        <button type="button" class="btn btn-secondary btn-lg btn-block mb-2"
-            style="height: 100px; width: 100%; background-color: #97DD50"><i class="fa fa-home"
-                style="float: left;"></i>Check in/out <br>
-            Rechnung</button>
-    </div>
-
-    <div>
-
-        <button type="button" class="btn btn-secondary btn-lg btn-block bg-danger mb-2 height backgroundColor"><i
-                class="material-icons" style="float: left;font-size: 30px;">edit</i>
-            Meldeschein
-        </button>
-    </div>
-    <div>
-        <button type="button" class="btn btn-secondary btn-lg btn-block mb-2 height backgroundColor"><i
-                class="material-icons" style="float: left;">pedal_bike</i>Bike info</button>
-    </div>
-
-    <div>
-        <button type="button" class="btn btn-secondary btn-lg btn-block mb-2 height backgroundColor"><i
-                class="material-icons" style="float: left;">castle</i>Sightseeing</button>
-    </div>
-    <div>
-        <button type="button" class="btn btn-secondary btn-lg btn-block mb-2 height backgroundColor"><i
-                class="material-icons" style="float: left;">restaurant</i>Restaurant</button>
-    </div>
-    <div>
-        <button type="button" class="btn btn-secondary btn-lg btn-block mb-2 height backgroundColor"><i
-                class="material-icons" style="float: left;">local_cafe</i>Fruhstuck</button>
-    </div>
-    <div>
-        <button type="button" class="btn btn-secondary btn-lg btn-block mb-2 height backgroundColor"><i
-                class="material-icons" style="float: left;">info</i>Information</button>
-    </div>
-    <div>
-        <button type="button" class="btn btn-secondary btn-lg btn-block height backgroundColor"><i
-                class="material-icons" style="float: left;">phone</i>Kontakt</button>
-    </div> -->
