--- a/src/app/pages/core/kontakt/kontakt.component.html
+++ b/src/app/pages/core/kontakt/kontakt.component.html
@@ -1,13 +1,13 @@
 <div class="container">
     <div class="row" style=" margin: 8%">
         <div class="center mb-2" style="text-align: center; align-items: center ; background-color: #C3996B;">
-            <img src="/assets/images/bike.png" width="50%" height="60%" alt="bike">
+            <img src="/assets/images/contact.png" width="40%" height="60%" alt="contact">
         </div>
         
         <a routerLink="/pages/information" class="p-0" style="text-decoration: none;">
             <div class="row m-0 align-item mb-2 border-color" style=" height: 50px; color: #C3996B;">
                 <div class="col-12 font-size text-align">
-                    <b>Routen</b>
+                    <b>Rufnummern</b>
                 </div>
             </div>
         </a>
@@ -15,7 +15,7 @@
         <a routerLink="/" class="p-0" style="text-decoration: none;">
             <div class="row m-0 align-item mb-2 border-color" style=" height: 50px; color: #C3996B;">
                 <div class="col-12 font-size text-align">
-                    <b>Laden E-Bike</b>
+                    <b>Email</b>
                 </div>
             </div>
         </a>
@@ -23,7 +23,7 @@
         <a routerLink="/" class="p-0" style="text-decoration: none;">
             <div class="row m-0 align-item mb-2 border-color" style=" height: 50px; color: #C3996B;">
                 <div class="col-12 font-size text-align">
-                    <b>Parken / Unterstellen</b>
+                    <b>Ärzte</b>
                 </div>
             </div>
         </a>
@@ -31,7 +31,7 @@
         <a routerLink="/" class="p-0" style="text-decoration: none;">
             <div class="row m-0 align-item mb-2 border-color" style=" height: 50px; color: #C3996B;">
                 <div class="col-12 font-size text-align">
-                    <b>Werkstatt</b>
+                    <b>Lost & Found</b>
                 </div>
             </div>
         </a>
@@ -39,7 +39,7 @@
         <a routerLink="/" class="p-0" style="text-decoration: none;">
             <div class="row m-0 align-item mb-2 border-color" style=" height: 50px; color: #C3996B;">
                 <div class="col-12 font-size text-align">
-                    <b>Mieten</b>
+                    <b>Kritik & Lob</b>
                 </div>
             </div>
         </a>
