--- a/src/app/pages/core/information/information.component.html
+++ b/src/app/pages/core/information/information.component.html
@@ -1,49 +1,49 @@
 <div class="container">
     <div class="row" style=" margin: 8%">
         <div class="center mb-2" style="text-align: center; align-items: center ; background-color: #C3996B;">
-            <img src="/assets/images/bike.png" width="50%" height="60%" alt="bike">
+            <img src="/assets/images/information.png" width="40%" height="60%" alt="information">
         </div>
-        
-        <a routerLink="/pages/information" class="p-0" style="text-decoration: none;">
+
+        <a routerLink="/#" class="p-0" style="text-decoration: none;">
             <div class="row m-0 align-item mb-2 border-color" style=" height: 50px; color: #C3996B;">
                 <div class="col-12 font-size text-align">
-                    <b>Routen</b>
+                    <b>Frühstück von/bis</b>
                 </div>
             </div>
         </a>
 
-        <a routerLink="/" class="p-0" style="text-decoration: none;">
+        <a routerLink="/#" class="p-0" style="text-decoration: none;">
             <div class="row m-0 align-item mb-2 border-color" style=" height: 50px; color: #C3996B;">
                 <div class="col-12 font-size text-align">
-                    <b>Laden E-Bike</b>
+                    <b>Checkin / Checkout</b>
                 </div>
             </div>
         </a>
 
-        <a routerLink="/" class="p-0" style="text-decoration: none;">
+        <a routerLink="/#" class="p-0" style="text-decoration: none;">
             <div class="row m-0 align-item mb-2 border-color" style=" height: 50px; color: #C3996B;">
                 <div class="col-12 font-size text-align">
-                    <b>Parken / Unterstellen</b>
+                    <b>Hochzeiten</b>
                 </div>
             </div>
         </a>
 
-        <a routerLink="/" class="p-0" style="text-decoration: none;">
+        <a routerLink="/#" class="p-0" style="text-decoration: none;">
             <div class="row m-0 align-item mb-2 border-color" style=" height: 50px; color: #C3996B;">
                 <div class="col-12 font-size text-align">
-                    <b>Werkstatt</b>
+                    <b>Museum</b>
                 </div>
             </div>
         </a>
 
-        <a routerLink="/" class="p-0" style="text-decoration: none;">
+        <a routerLink="/#" class="p-0" style="text-decoration: none;">
             <div class="row m-0 align-item mb-2 border-color" style=" height: 50px; color: #C3996B;">
                 <div class="col-12 font-size text-align">
-                    <b>Mieten</b>
+                    <b>Getränke</b>
                 </div>
             </div>
         </a>
-        <a routerLink="/" class="p-0" style="text-decoration: none;">
+        <a routerLink="/#" class="p-0" style="text-decoration: none;">
             <div class="row m-0  mb-2 border-color" style=" height: 120px; color: #C3996B;">
                 <div class="col-12 font-size text-align">
                     <b>Bemerkung</b>
