--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,10 +4,10 @@
         <p style="padding-top: 10px;">logo</p>
     </div>
 
-    <a routerLink="/test" class="p-0" style="text-decoration: none;">
+    <a routerLink="/pages/checkin-out" class="p-0" style="text-decoration: none;">
         <div class="row m-0 text-white align-item mb-2" style="height: 100px; background-color: #8BC63F;">
             <div class="col-2">
-                <i class="material-icons" style="font-size: 5rem;">pedal_bike</i>
+                <img src="/assets/images/checkin.png" width="70px" alt="checkin">
             </div>
 
             <div class="col-10 text-white font-size text-align">
@@ -16,10 +16,10 @@
         </div>
     </a>
 
-    <a routerLink="/test" class="p-0" style="text-decoration: none;">
+    <a routerLink="/" class="p-0" style="text-decoration: none;">
         <div class="row m-0 text-white align-item mb-2 height" style="background-color: #EF3F36;">
             <div class="col-2">
-                <i class="material-icons" style="font-size: 3rem;">mode_edit_outlined</i>
+                <img src="/assets/images/edit.png" width="50px" alt="edit">
             </div>
 
             <div class="col-10 text-white font-size text-align">
@@ -31,7 +31,7 @@
     <a routerLink="/pages/bike-info" class="p-0" style="text-decoration: none;">
         <div class="row m-0 text-white align-item mb-2 height" style="background-color: #C3996B;">
             <div class="col-2">
-                <i class="material-icons" style="font-size: 3rem;">pedal_bike</i>
+                <img src="/assets/images/bike.png" width="50px"  alt="bike">
             </div>
 
             <div class="col-10 text-white font-size text-align">
@@ -40,10 +40,10 @@
         </div>
     </a>
 
-    <a routerLink="/test" class="p-0" style="text-decoration: none;">
+    <a routerLink="/pages/sightseeing" class="p-0" style="text-decoration: none;">
         <div class="row m-0 text-white align-item mb-2 height" style="background-color: #C3996B;">
             <div class="col-2">
-                <i class="material-icons" style="font-size: 3rem;">castle</i>
+                <img src="/assets/images/castle.png" width="40px" height="50px" alt="castle">
             </div>
 
             <div class="col-10 text-white font-size text-align">
@@ -52,10 +52,10 @@
         </div>
     </a>
 
-    <a routerLink="/test" class="p-0" style="text-decoration: none;">
+    <a routerLink="/pages/restaurant" class="p-0" style="text-decoration: none;">
         <div class="row m-0 text-white align-item mb-2 height" style="background-color: #C3996B;">
             <div class="col-2">
-                <i class="material-icons" style="font-size: 3rem;">person</i>
+                <img src="/assets/images/chief.png" width="50px" alt="chief">
             </div>
 
             <div class="col-10 text-white font-size text-align">
@@ -64,10 +64,10 @@
         </div>
     </a>
 
-    <a routerLink="/test" class="p-0" style="text-decoration: none;">
+    <a routerLink="/pages/fruhstuck" class="p-0" style="text-decoration: none;">
         <div class="row m-0 text-white align-item mb-2 height" style="background-color: #C3996B;">
             <div class="col-2">
-                <i class="material-icons" style="font-size: 3rem;">coffee_outlined</i>
+                <img src="/assets/images/coffee.png" width="50px"  alt="coffee">
             </div>
 
             <div class="col-10 text-white font-size text-align">
@@ -76,10 +76,10 @@
         </div>
     </a>
 
-    <a routerLink="/test" class="p-0" style="text-decoration: none;">
+    <a routerLink="/pages/information" class="p-0" style="text-decoration: none;">
         <div class="row m-0 text-white align-item mb-2 height" style="background-color: #C3996B;">
             <div class="col-2">
-                <i class="material-icons" style="font-size: 3rem;">info_outlined</i>
+                <img src="/assets/images/information.png" width="50px"  alt="information">
             </div>
 
             <div class="col-10 text-white font-size text-align">
@@ -88,10 +88,10 @@
         </div>
     </a>
 
-    <a routerLink="/test" class="p-0" style="text-decoration: none;">
+    <a routerLink="/pages/kontakt" class="p-0" style="text-decoration: none;">
         <div class="row m-0 text-white align-item mb-2 height" style="background-color: #C3996B;">
             <div class="col-2">
-                <i class="material-icons" style="font-size: 3rem;">call_outlined</i>
+                <img src="/assets/images/contact.png" width="50px"  alt="contact">
             </div>
 
             <div class="col-10 text-white font-size text-align">
