--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+  }
+.height{
+    height: 60px;
+    width: 100%;
+}
+.backgroundColor {
+  background-color: #C29F30;
+}
+.font-size{
+  font-size: 20px;
+}
+.align-item{
+  align-items: center;
+}
+.text-align{
+  text-align: center;
+}
+.border-color{
+    border: 2px solid #C3996B;
+}
